--- a/contacts.html
+++ b/contacts.html
@@ -227,10 +227,10 @@
                         <a class="nav-link" href="services.html">Услуги</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="gallery.html">Галерея</a>
+                        <a class="nav-link" href="gallery.html">Галерея</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">Контакты</a>
+                        <a class="nav-link active" href="contacts.html">Контакты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="rep.html">Отзывы</a>
